force-app/main/default/objects/Lead/fields/Citizen_Id__c.field-meta.xml
<CustomField>
    <fullName>Citizen_Id__c</fullName>
    <label>Citizen Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>