force-app/main/default/objects/Lead/fields/Country_ID__c.field-meta.xml
<CustomField>
    <fullName>Country_ID__c</fullName>
    <label>Country (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>