force-app/main/default/objects/Lead/fields/Dealer_Lead_Lookup_Account__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Lead_Lookup_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Dealer_Master</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Dealer) Account</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>