force-app/main/default/objects/Lead/fields/First_Name_Native__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Native__c</fullName>
    <label>First Name (Native)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>