force-app/main/default/objects/Lead/fields/Kubota_Id__c.field-meta.xml
<CustomField>
    <fullName>Kubota_Id__c</fullName>
    <formula>Account__r.Kubota_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kubota Id</label>
    <type>Text</type>
</CustomField>