force-app/main/default/objects/Lead/fields/Last_Name_Native__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Native__c</fullName>
    <label>Last Name (Native)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>