force-app/main/default/objects/Lead/fields/Mobile_ID__c.field-meta.xml
<CustomField>
    <fullName>Mobile_ID__c</fullName>
    <label>Mobile (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>