force-app/main/default/objects/Lead/fields/Mobile_phone_no_1__c.field-meta.xml
<CustomField>
    <fullName>Mobile_phone_no_1__c</fullName>
    <label>Mobile phone no.1</label>
    <type>Phone</type>
</CustomField>