force-app/main/default/objects/Lead/fields/Postcode_ID__c.field-meta.xml
<CustomField>
    <fullName>Postcode_ID__c</fullName>
    <label>Postcode (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>