force-app/main/default/objects/Lead/fields/Province_ID__c.field-meta.xml
<CustomField>
    <fullName>Province_ID__c</fullName>
    <label>Province ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>