force-app/main/default/objects/Lead/fields/Related_DailySales_KADs__c.field-meta.xml
<CustomField>
    <fullName>Related_DailySales_KADs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related DailySales(KADs)</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Order</relationshipName>
    <type>Lookup</type>
</CustomField>