force-app/main/default/objects/Lead/fields/SF_id_18_digit__c.field-meta.xml
<CustomField>
    <fullName>SF_id_18_digit__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF id 18 digit</label>
    <type>Text</type>
</CustomField>