force-app/main/default/objects/Lead/fields/Street_ID__c.field-meta.xml
<CustomField>
    <fullName>Street_ID__c</fullName>
    <label>Street (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>