force-app/main/default/objects/Lead/fields/Sub_District_ID__c.field-meta.xml
<CustomField>
    <fullName>Sub_District_ID__c</fullName>
    <label>Sub District (ID)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>