force-app/main/default/objects/Lead/fields/User_No__c.field-meta.xml
<CustomField>
    <fullName>User_No__c</fullName>
    <label>User No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>