force-app/main/default/objects/Lead/recordTypes/Kubota_App_User.recordType-meta.xml
<RecordType>
    <fullName>Kubota_App_User</fullName>
    <active>true</active>
    <businessProcess>SKC Lead process</businessProcess>
    <label>Kubota App User</label>
</RecordType>