force-app/main/default/objects/Lead/listViews/Kubota_App_User_All.listView-meta.xml
<ListView>
    <fullName>Kubota_App_User_All</fullName>
    <columns>FULL_NAME</columns>
    <columns>Account__c</columns>
    <columns>Related_Lead__c</columns>
    <columns>Kubota_Id__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Kubota App User</value>
    </filters>
    <label>Kubota App User : All</label>
</ListView>